fix overflow issue on load

--- a/source/styles/components/header.css
+++ b/source/styles/components/header.css
@@ -70,6 +70,7 @@ header {
     }
 
     & .options {
+      visibility: hidden;
 
       @media (--large-min) {
         position: absolute;
